mpegts: Add GIR generation array anotations

For function parameters that are known to be arrays.

https://bugzilla.gnome.org/show_bug.cgi?id=796221